<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/ccccc"
    android:orientation="vertical"
    tools:context=".login">

    <EditText
        android:id="@+id/emailfield"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8sp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/lemail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passfield"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8sp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:text="@string/login"
        android:textSize="20sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textStyle="bold"
        android:background="@drawable/button1"
        android:text="@string/register"
        android:textSize="30sp" />

</LinearLayout>