<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ccccc"
    android:orientation="vertical"
    android:id="@+id/navidrawer5"
    tools:context=".Order_Food">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:text="We deliver what you order within 45 minutes in the respected area..."/>


    <EditText
        android:id="@+id/cliname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"
        android:hint="@string/namecl" />
    <EditText
        android:id="@+id/cliphn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"
        android:hint="@string/phone_numbercl" />
    <EditText
        android:id="@+id/foodidorder"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"
        android:hint="@string/food_idcl" />
    <EditText
        android:id="@+id/cliaddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"
        android:hint="@string/addresscl" />
    <EditText
        android:id="@+id/clquan"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"
        android:hint="@string/quantitycl" />

    <Button
        android:id="@+id/sentbtn"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:text="@string/ordercl" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nv5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navmenu"
        android:layout_gravity="start"
        app:headerLayout="@layout/hedernev">


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>