<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ccccc"
    android:orientation="vertical"
    android:id="@+id/navidrawer1"
    tools:context=".mainmenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">


    <Button
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/fitem" />

    <Button
        android:id="@+id/offersbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/offers" />

    <Button
        android:id="@+id/btnmsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/Massage" />
    <Button
        android:id="@+id/orderid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="Food Order" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nv1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navmenu"
        android:layout_gravity="start"
        app:headerLayout="@layout/hedernev">


    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>

